--- a/WarThunderParody.Domain/WarThunderParody.Domain.csproj
+++ b/WarThunderParody.Domain/WarThunderParody.Domain.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.3.0" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.14" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.14" />
     </ItemGroup>
 
 </Project>
